src/components/Header/Header.module.css
.headerContainer {
	border-style: solid;
	border-color: var(--mantine-color-gray-4);
	border-width: 0;
	border-bottom-width: 1px;

	@mixin dark {
		border-color: var(--mantine-color-dark-5);
	}
}

.mobileSelection  {
	border: 0 solid var(--mantine-color-gray-1);
	border-bottom-width: 1px;
	background-color: var(--mantine-color-gray-1);
	height: 117px;
	display: flex;

	@mixin dark {
		background-color: var(--mantine-color-dark-9);
		border-color: var(--mantine-color-dark-4);
	}
}

